<resources>
    <string name="app_name">MCF</string>



    <string name="action_settings">Settings</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>

    <string name="notification_open_file">File download complete</string>
    <string name="file_downleded">file have been downloaded in folder RDSO_PIMS, click to read file</string>
    <string name="open">Open</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_file_found">File Not Found</string>
    <string name="logo">logo</string>

    <string name="no_app_available">No Application Available To Open This File</string>




    <string name="str_ShowOnPermission">Please Allow permission for your app.
        If you deny permissions will not be able to use functionality of this app.</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="network_error">No internet available</string>
    <string name="invalid_password">Password not correct</string>
    <string name="invalid_user_Id">Incorrect user Id</string>
    <string name="welcome">Welcome</string>
    <string name="mr">Mr.</string>
    <string name="deficiencies_advised">Deficiencies Advised</string>
    <string name="status_of_application">Status of Application</string>
    <string name="search">Search</string>
    <string name="s_no">S. No.</string>
    <string name="reference_no">Reference no.</string>
    <string name="colon">:</string>
    <string name="firm_name">Firm name</string>
    <string name="stage">Stage</string>
    <string name="view_items">View items</string>
    <string name="view_application">View application</string>
    <string name="date_of_approve_rejected">Date of Approve/Rejected</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="drawingNo">Drawing no.</string>
    <string name="subCategory">Sub category</string>
    <string name="plNo">PL No.</string>
    <string name="specificationNo">Specification no.</string>
    <string name="item_name">Item name</string>
    <string name="cancel">Cancel</string>
    <string name="select_the_following">Select the following</string>
    <string name="deficiency_after_scrutiny">Deficiency after Scrutiny</string>
    <string name="deficiency_after_assessment_scrutiny">Deficiency after Assessment Scrutiny</string>
    <string name="modern_coach_factory_nraebareli">Modern Coach Factory\nRaebareli</string>
    <string name="vendor_replied_cases">Vendor Replied Cases</string>
    <string name="cases_after_assessment">Cases After Assessment</string>
    <string name="revert_cases">Revert Cases</string>
    <string name="vendor_wise_report">Vendor wise Report</string>
    <string name="dashboard">Dashboard</string>
    <string name="fresh_cases">Fresh cases</string>
    <string name="cases_reverted_by_ame_vdc">Cases reverted by AME/VDC</string>
    <string name="case_in_progress">Case in Process</string>
    <string name="approved">Approved</string>
    <string name="closed">Closed</string>
    <string name="proceed">Proceed</string>
    <string name="select_firm_name">Select firm name</string>
    <string name="enter_firm_name">Enter firm name</string>
    <string name="total_cases">Total cases</string>
    <string name="scrutiny_of_documents">Scrutiny of documents</string>
    <string name="date_of_application">Date of application</string>
    <string name="address">Address</string>
    <string name="is_assessment_required">Is Assessment Required</string>
    <string name="status">Status</string>
    <string name="remark">Remark</string>
    <string name="date_of_receiving">Date of receiving</string>
    <string name="default_error">Something went wrong</string>
    <string name="date">Date</string>
    <string name="tender_no">Tender no.</string>
    <string name="tender_date">Tender date</string>
    <string name="letter_no">Letter no.</string>
    <string name="letter_date">Letter date</string>
    <string name="cases_for_assessment">Cases for assessment</string>
    <string name="case_for_recommendation">Case for recommendation</string>
    <string name="cases_for_scrutiny">Cases for scrutiny</string>
    <string name="recommended_ao">Recommended AO</string>
    <string name="remark_by_sse">Remark by SSE/VDC</string>
    <string name="cases_for_scrutiny_of_assessment_report">Cases For Scrutiny of Assessment Report</string>
    <string name="revert_cases_from_SSE_VDC">Revert Cases from SSE/VDC</string>
    <string name="revert_cases_by_dycme">Revert Cases by Dy.CME</string>
    <string name="cases_reverted_by_Dy_CME">Cases Reverted by Dy.CME</string>
    <string name="status_by_SSE">Status by SSE/VDC</string>
    <string name="case_for_verification_of_assessment">Case For Verification of Assessment Report</string>
    <string name="caseForNomination">Cases For Nomination</string>
    <string name="recommendedAO">Recommended AO</string>
    <string name="remarkByAME">Remark by AME</string>
    <string name="casesForApprovalRejection">Cases for Approval/Rejection</string>
    <string name="remark_by_DyCME">Remark by Dy.CME</string>
    <string name="probable_Date_for_Firm_Visit">Probable Date for Firm Visit</string>
    <string name="attachment_by_SSE">Attachment by SSE</string>
    <string name="startDownloading">Start downloading</string>
    <string name="initial_scrutiny_report">Initial Scutiny Report</string>
    <string name="attachment_of_scrutiny">ATTACHMENT_OF_SCRUTINY</string>
    <string name="deficiency_attachment">Deficiency Attachment</string>
    <string name="status_by_Assessment_Officer">Status by Assessment Officer</string>
    <string name="remark_by_AO">Remark by AO</string>
    <string name="status_by_AME_VDC">Status by AME/VDC</string>
    <string name="remark_by_AME_VDC">Remark by AME/VDC</string>
    <string name="assesment_Report">Assesment Report</string>
    <string name="is_Reverted_by_Dy_CME">Is Reverted by Dy.CME</string>
    <string name="status_by_dy">Status by Dy.CME</string>
    <string name="remark_by_Dy">Remark by Dy.CME</string>
    <string name="initial_Scutiny_Report">Initial Scutiny Report</string>
    <string name="is_Case_Reverted_by_SSE">Is Case Reverted by SSE/VDC</string>
    <string name="caseAllotToInspector">Cases Alloted to Inspector</string>
    <string name="assessment_Officer_Name">Assessment Officer Name</string>
    <string name="probable_Date_ofVisit">Probable Date of Visit</string>
    <string name="is_Reverted_to_Dy">Is Reverted to Dy.CME</string>
    <string name="cases_by_ame">Cases Reply by AME/VDC</string>
    <string name="cese_revert_by_cple">Cases Reverted by CPLE</string>
    <string name="is_Reverted_by_ame">Is Reverted to AME/VDC</string>
    <string name="login_fail">User name or password not correct</string>
    <string name="cases_for_scrutiny_doc">Cases after Scrutiny of Documents</string>
    <string name="cases_for_assessment_report">Cases after Assessment Report Scrutiny</string>
    <string name="guideline">Guideline for new vendors</string>
    <string name="mcl_logo">Vendor Registration Information</string>
    <string name="cases">Cases</string>
</resources>