<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="data"
            type="com.indtel.mcf.core.dialogs.vendorWise.VendorWiseViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:padding="@dimen/_4dp"
                    android:text="@string/vendor_wise_report"
                    android:textColor="@color/textColorCard"
                    android:textSize="@dimen/_24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginLeft="@dimen/_8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:layout_marginRight="@dimen/_8dp"
                    android:padding="@dimen/_5dp"
                    android:text="@string/select_the_following"
                    android:textColor="@color/textColorGeneral"
                    android:textSize="@dimen/_20sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginLeft="@dimen/_8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:layout_marginRight="@dimen/_8dp"
                    android:padding="@dimen/_8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/heading">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/caseInProgress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:onClick="@{(view) -> data.onSelectionClick(view)}"
                        android:text="@string/case_in_progress"
                        android:textColor="@color/textColorGeneral"
                        android:textSize="@dimen/_16sp"
                        android:textStyle="italic" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/approved"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_16dp"
                        android:gravity="center_vertical"
                        android:onClick="@{(view) -> data.onSelectionClick(view)}"
                        android:text="@string/approved"
                        android:textColor="@color/textColorGeneral"
                        android:textSize="@dimen/_16sp"
                        android:textStyle="italic" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/closed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_16dp"
                        android:gravity="center_vertical"
                        android:onClick="@{(view) -> data.onSelectionClick(view)}"
                        android:text="@string/closed"
                        android:textColor="@color/textColorGeneral"
                        android:textSize="@dimen/_16sp"
                        android:textStyle="italic" />

                </RadioGroup>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardSelection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginLeft="@dimen/_8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:layout_marginRight="@dimen/_8dp"
                    app:cardCornerRadius="@dimen/_8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_8dp"
                        android:layout_marginBottom="@dimen/_8dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8dp"
                            android:layout_marginLeft="@dimen/_8dp"
                            android:layout_marginTop="@dimen/_8dp"
                            android:layout_marginEnd="@dimen/_8dp"
                            android:layout_marginRight="@dimen/_8dp"
                            android:text="@string/select_firm_name"
                            android:textColor="@color/textColorGeneral"
                            android:textSize="@dimen/_20sp"
                            android:textStyle="normal" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/inputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8dp"
                            android:layout_marginLeft="@dimen/_8dp"
                            android:layout_marginTop="@dimen/_8dp"
                            android:layout_marginEnd="@dimen/_8dp"
                            android:layout_marginRight="@dimen/_8dp">

                            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                                android:id="@+id/firmNameAuto"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/enter_firm_name"
                                android:paddingStart="@dimen/_8dp"
                                android:paddingLeft="@dimen/_8dp"
                                android:paddingEnd="@dimen/_8dp"
                                android:paddingRight="@dimen/_8dp"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_16sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/proceed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginLeft="@dimen/_8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:layout_marginRight="@dimen/_8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:onClick="@{() -> data.onProceedClick()}"
                    android:padding="@dimen/_4dp"
                    android:paddingStart="@dimen/_18dp"
                    android:paddingEnd="@dimen/_18dp"
                    android:text="@string/proceed"
                    android:textColor="@color/textColorCard"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardSelection"
                    app:layout_constraintVertical_bias="1.0" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginLeft="@dimen/_8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:layout_marginRight="@dimen/_8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:onClick="@{() -> data.onCancelClick()}"
                    android:padding="@dimen/_4dp"
                    android:paddingStart="@dimen/_18dp"
                    android:paddingEnd="@dimen/_18dp"
                    android:text="@string/cancel"
                    android:textColor="@color/textColorCard"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/proceed"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardSelection"
                    app:layout_constraintVertical_bias="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>