<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="data"
            type="com.indtel.mcf.core.dialogs.caseDefault.CaseDefaultViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:padding="@dimen/_12dp"
                    android:text="@string/cases_after_assessment"
                    android:textColor="@color/textColorCard"
                    android:textSize="@dimen/_20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/select_the_following"
                    android:textColor="@color/textColorGeneral"
                    android:textSize="@dimen/_20sp"
                    android:textStyle="normal"
                    android:padding="@dimen/_5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:padding="@dimen/_16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/heading">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:onClick="@{(view) -> data.onSelectionClick(view)}"
                        android:id="@+id/FirstSelect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:text="@string/fresh_cases"
                        android:textColor="@color/textColorGeneral"
                        android:textSize="@dimen/_16sp"
                        android:textStyle="italic" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:onClick="@{(view) -> data.onSelectionClick(view)}"
                        android:id="@+id/SecondSelect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:text="@string/cases_reverted_by_ame_vdc"
                        android:textColor="@color/textColorGeneral"
                        android:textSize="@dimen/_16sp"
                        android:textStyle="italic"
                        android:layout_marginTop="@dimen/_16dp"/>

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:onClick="@{(view) -> data.onSelectionClick(view)}"
                        android:id="@+id/ThirdSelect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:text="@string/cases_reverted_by_ame_vdc"
                        android:textColor="@color/textColorGeneral"
                        android:textSize="@dimen/_16sp"
                        android:textStyle="italic"
                        android:layout_marginTop="@dimen/_16dp"/>

                </RadioGroup>

                <androidx.appcompat.widget.AppCompatButton
                    android:onClick="@{() -> data.onCancelClick()}"
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:padding="@dimen/_12dp"
                    android:paddingStart="@dimen/_50dp"
                    android:paddingEnd="@dimen/_50dp"
                    android:text="@string/cancel"
                    android:textColor="@color/textColorCard"
                    android:textSize="@dimen/_18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                    app:layout_constraintVertical_bias="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>